# agencli

./: main.py  providers.py  pyproject.toml
config/: agencli.json  aish.json  system_overview.md
config/agents/: default.md  deutsch.md
config/context_modules/: format.py  system_info.py  tmux.py  zsh.py
src/agencli/: __init__.py  agencli.py
src/aish/: __init__.py  aish.py  cli.py  utils.py
